plugins {
    id "com.gradleup.shadow" version "9.3.1"
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

version = "mc${archive_minecraft_version}-Fabric-${mod_version}"
group = project.maven_group
var realVersion = project.mod_version + '+fabric'

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url "https://api.modrinth.com/maven" }
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
}

sourceSets {
    main.resources.srcDirs += "$rootDir/src/generated/resources"
}

loom {
    accessWidenerPath = file("src/main/resources/${project.mod_id}.accesswidener")
}

configurations {
    shadowCommon
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

//    api("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
//        exclude(group: "net.fabricmc.fabric-api")
//    }
    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

    compileOnly("com.google.errorprone:error_prone_annotations:2.18.0")

    implementation shadowCommon("org.yaml:snakeyaml:${project.snakeyaml_version}")
    implementation shadowCommon("com.ezylang:EvalEx:${project.evalex_version}")
    implementation shadowCommon(project(':annotation')) {
        transitive(false)
    }
    implementation shadowCommon(project(':annotation-processor')) {
        transitive(false)
    }
    annotationProcessor project(':annotation-processor')

    implementation "com.google.code.findbugs:jsr305:3.0.2"

//    implementation "dev.architectury:architectury-fabric:${project.architectury_version}"
//    implementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
    compileOnly "me.shedaniel:REIPluginCompatibilities-forge-annotations:12.+"

    implementation "maven.modrinth:jade:${jade_version}+fabric"

//    // compile against the JEI API but do not include it at runtime
//    modCompileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
//    modCompileOnly("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}")
//    // at runtime, use the full JEI jar for Forge
//    implementation("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
//
//    modCompileOnly "dev.emi:emi-fabric:${emi_version}:api"
//    modRuntimeOnly "dev.emi:emi-fabric:${emi_version}"
}

processResources {
    inputs.property "version", realVersion

    filesMatching("fabric.mod.json") {
        expand "version": realVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
    it.options.compilerArgs.add("-Akiwi.clientOnlyMod")
}

tasks.withType(Jar).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    it.exclude(["/assets/${project.mod_id}/blockstates",
                "/assets/${project.mod_id}/models",
                "/assets/${project.mod_id}/lang/en_us.existing.yaml",
                "/assets/kaleidos",
                "/snownee/${project.mod_id}/test",
                "/data",
                "/.cache",
                "/third_party"])
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

shadowJar {
    exclude([
            "/assets/${project.mod_id}/blockstates",
            "/assets/${project.mod_id}/models",
            "/assets/${project.mod_id}/lang/en_us.existing.yaml",
            "/assets/kaleidos",
            "/assets/kswitch",
            "/assets/test",
            "/snownee/${project.mod_id}/test",
            '**/*.bat',
            '**/*.py',
            "/data",
            "/.cache",
            "/third_party"])
    relocate "org.yaml.snakeyaml", "${project.group}.shadowed.org.yaml.snakeyaml"
    relocate "com.ezylang.evalex", "${project.group}.shadowed.com.ezylang.evalex"
    configurations = [project.configurations.shadowCommon]
    archiveClassifier.set('')

    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

jar {
    enabled = false // disable plain jar creation
}

assemble {
    dependsOn(tasks.shadowJar)
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}

publishMods {
    file = shadowJar.archiveFile
    additionalFiles.from(sourcesJar.archiveFile)
    changelog = file('CHANGELOG.md').exists() ? file('CHANGELOG.md').text : ''
    type = ['release': STABLE, 'beta': BETA, 'alpha': ALPHA][release_type]
    modLoaders.add("fabric")
    modLoaders.add("quilt")
    displayName = "[Fabric ${supported_version}] ${mod_version}"
    version = realVersion

    curseforge {
        projectId = "549404"
        accessToken = providers.environmentVariable("CURSE_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("fabric-api")
        optional("cloth-config")
    }
    modrinth {
        projectId = "ufdDoWPd"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("fabric-api")
        optional("cloth-config")
    }
}